--- a/about.html
+++ b/about.html
@@ -358,7 +358,7 @@ input[type=submit]:hover {
  <div class="back">
  </div>
  <div id="card">
-  <img src="E:/html subline/projetc 2 store/image/img.jpg"/>
+  <img src="image/img.jpg"/>
   <h2>Manish Borah</h2>
   <p style="color: gray; ">Founder/CEO/Desiner</p>
   <p>MY KYARA LIMITED&copy;</p>
@@ -407,7 +407,7 @@ input[type=submit]:hover {
 <!-- Footer -->
 <footer class="foot">
   <div class="footlogo">
-    <a href="index.html"><img src="E:\html subline\projetc 2 store\image\kyara.jpg"></a>
+    <a href="index.html"><img src="image/kyara.jpg"></a>
   </div>
   <br>
   <div class="footnav">
