--- a/orders.html
+++ b/orders.html
@@ -366,7 +366,7 @@
   <!--FOOTER-->
 <footer class="foot">
     <div class="footlogo">
-      <img src="E:\html subline\projetc 2 store\image\kyara.jpg">
+      <img src="image/kyara.jpg">
     </div>
  
     <div class="footnav">
