--- a/services.html
+++ b/services.html
@@ -420,7 +420,7 @@ input[type=submit]:hover {
 <!--footer-->
 <footer class="foot">
     <div class="footlogo">
-      <img src="E:\html subline\projetc 2 store\image\kyara.jpg">
+      <img src="image/kyara.jpg">
     </div>
  
     <div class="footnav">
